refact: Stream.toList로 변경